--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - MOCK_URL=http://mock_service:5001/mock-response
+      - MOCK_URL=${MOCK_URL:-http://mock_service:5001/mock-response}
     depends_on:
       - mock_service
 
@@ -16,5 +16,5 @@ services:
       context: ./Services/mock
     ports:
       - "5001:5001"
-    env_file:
-      - ./.env
+    environment:
+      - MOCK_RESPONSE_TYPE=${MOCK_RESPONSE_TYPE:-success}
