feat[mock]: resolver error ruta modulo Dockerfile en service mock

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MOCK_RESPONSE_TYPE=success
 MOCK_URL=http://mock_service:5001/mock-response
+MOCK_DATA_FILE=success.json
 #https://api.otro-servicio.com/v1/data
